# cb2cbz

./: .gitignore  README.md  cb2cbz.sublime-project  pyproject.toml
src/cb2cbz/: __init__.py  __main__.py  converters.py
tests/: __init__.py  conftest.py  test_converters.py  test_main.py
tests/data/: 2953_alien_theories_3.pfm  cursed_p_alpha.tif  duplicated_dir.cbz  duplicated_file_dir.cbz  duplicated_files.cbz  xkcd.cb7  xkcd.cbr  xkcd.cbt  xkcd.cbz
