[project]
name = "cb2cbz"
version = "0.1.0"
description = "Comic Book files to CBZ converter"
authors = [{ name = "Lawrence González", email = "lawrencejgd@gmail.com" }]
dependencies = [
    "pillow>=10.4.0",
    "pillow-jxl-plugin>=1.2.5",
    "libarchive-c>=5.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
keywords = ["comics", "comic books", "converter", "cbz", "cbr", "cb7", "cbt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: File Formats",
    "Topic :: Multimedia",
    "Topic :: System :: Archiving :: Compression",
    "Typing :: Typed",
]

[project.scripts]
cb2cbz = "cb2cbz.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "black>=24.4.2",
    "ruff>=0.5.3",
    "pytest>=8.3.1",
    "pytest-datadir>=1.5.0",
    "coverage>=7.6.0",
    "types-pillow>=10.2.0.20240822",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
fixable = ["I001"]
ignore = ["ANN101", "ANN102", "UP007", "UP006", "RUF012", "TD003"]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    "ASYNC1",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "PLC",
    "FIX",
    "ERA",
    "PD",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.mypy]
strict = true
sqlite_cache = true
exclude = "tests"

[tool.coverage.run]
dynamic_context = "test_function"
